--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Run csvtofhir CLI
       run: |
         csvtofhir validate -f demo/config/data-contract.json
-        csvtofhir convert -f demo/input/Patient.csv -c demo/config  -o demo/output
+        csvtofhir convert -f demo/input/patient.csv -c demo/config  -o demo/output
         rm -rf demo/output
         mkdir -p demo/output
         csvtofhir convert -d demo  -o demo/output
