--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -5,7 +5,7 @@ on:
     types: [ published ]
 
 jobs:
-  publish-release:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
