--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: name: Publish Release to PyPi
+name: Publish Release to PyPi
 
 on:
   release:
