Additional CLI Examples and Verification (#10)
* - Added top-level "demo" directory for use with README CLI examples.
- Created additional GitHub action steps for CI to validate CLI execution.

Signed-off-by: Dixon Whitmire <dixonwh@gmail.com>

* updating demo examples to use lower case file names to match what's in source control

Signed-off-by: Dixon Whitmire <dixonwh@gmail.com>

Signed-off-by: Dixon Whitmire <dixonwh@gmail.com>

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -26,3 +26,10 @@ jobs:
     - name: Execute Unit Tests
       run: |
         python -m pytest
+    - name: Run csvtofhir CLI
+      run: |
+        csvtofhir validate -f demo/config/data-contract.json
+        csvtofhir convert -f demo/input/patient.csv -c demo/config  -o demo/output
+        rm -rf demo/output
+        mkdir -p demo/output
+        csvtofhir convert -d demo  -o demo/output
