--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ install_requires =
     python-dotenv >=0.20, <1.0
     python-dateutil >=2.8, <3.0
     pytz ==2022.1
+    smart_open >=6.2.0
 package_dir =
     = src
 python_requires = >=3.9
