--- a/setup.cfg
+++ b/setup.cfg
@@ -22,11 +22,12 @@ classifiers =
 install_requires =
     deepdiff >=5.8, <6.0
     fhir.resources >=6.4, <7.0
-    pandas >=1.4 ,<2.0
+    pandas >=1.4 ,<1.5
     pydantic >=1.9, <2.0
     python-dotenv >=0.20, <1.0
     python-dateutil >=2.8, <3.0
     pytz ==2022.1
+    smart_open >=6.2.0
 package_dir =
     = src
 python_requires = >=3.9
