--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,6 @@ install_requires =
     python-dotenv >=0.20, <1.0
     python-dateutil >=2.8, <3.0
     pytz ==2022.1
-    smart_open >=6.2.0
 package_dir =
     = src
 python_requires = >=3.9
@@ -44,6 +43,7 @@ console_scripts =
 [options.extras_require]
 dev = pytest >=7.1, <8.0;flake8 >=4.0, <5.0;autopep8 >=1.6, <2.0;isort >= 5.10, <6.0
 notebook = jupyterlab
+optimized-streaming = smart_open >=6.2.0
 
 
 [flake8]
