--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ classifiers =
 install_requires =
     deepdiff >=5.8, <6.0
     fhir.resources >=6.4, <7.0
+    numpy <2
     pandas >=1.4 ,<1.5
     pydantic >=1.9, <2.0
     python-dotenv >=0.20, <1.0
